# aula18_bootcamppyton

./: README.md  exemplo_00.py  pokemin.db  pyproject.toml
src/: controller.py  db.py  main.py  models.py  schema.py
